--- a/res/lottery.css
+++ b/res/lottery.css
@@ -22,9 +22,11 @@ body{
 }
 
 #lottery li {
+    background-color: #fff;
     float: left;
     margin: 0 10px 0 0;
     padding: 0;
+    height: 100px;
 }
 
 #lottery li img {
